group 'com.ncc.savior'
version '0.1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/milestone" }
}

mainClassName = "com.ncc.savior.desktop.sidebar.SidebarApplication"

dependencies {
	compile project(':common')
	compile project(':clipboard')
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
	compile group: 'org.slf4j', name: 'slf4j-ext', version: '1.7.25'    
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
	compile group: 'com.jcraft', name: 'jsch', version: '0.1.54'
	compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.26'
	compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.26'
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.2'
	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.2'
	compile "org.apache.commons:commons-csv:1.5"
	compile group: 'com.github.dblock.waffle', name: 'waffle-jna', version: '1.8.1'
	//waffle 1.8.1 brings in JNA 4.2.1 which doesn't work with the clipboard
	// JNA's latest (as of 6/4) is 4.5.1
	compile group: 'net.java.dev.jna', name: 'jna', version: '4.5.1'
	//waffles latest (as of 5/18) is 1.8.3 which uses jna 4.3.0, but 4.3.0 does not work with copy paste
	//compile group: 'net.java.dev.jna', name: 'jna', version: '4.3.0'
	//4.4.0 seems to have the fix for copy/paste
	//compile group: 'net.java.dev.jna', name: 'jna', version: '4.4.0'
	//compile group: 'net.java.dev.jna', name: 'jna', version: '4.5.0'
	
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
